# fund-agent

./: .coverage  .gitattributes  .gitignore  1.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SUPERPOWERS.md  VERSION  conftest.py  daily_report_card.py  opencode.plugin.js  package.json  plan.txt  pyproject.toml  report.md.evidence.json  report.md.news_keywords_request.json  report.news_keywords_request.json  requirements-dev.txt  requirements-legacy.txt  requirements-optional.txt  requirements.txt  verify_quant_framework.py
.github/workflows/: ci.yml  plugin-ci.yml
.opencode/: INSTALL.md
artifacts/audit/: dead_code.json  docs_links.json  (+3 more)
config/: providers.example.yaml
docs/: CONTRACT_FREEZE.md  START_HERE.md  agent-host-quickstart.md  external-host-smoke-commands.md  fund_agent_scoring_trend_optimization.md  host-compatibility.md  host-integration.md  host-readiness-matrix.md  maintenance.md  mcp-live-testing.md  news_design.md  plugin-api.md  release-checklist-v0.4.9.md  release-checklist.md  release-notes-v0.4.9-draft.md  release-readiness-v0.4.9-dev.md  skill-io-examples.md  tools-inventory.md  v1-analysis-pipeline.md  v1-release-readiness.md  v1.2-host-integration-checklist.md
examples/: dca_adjustment.json  host_subprocess_runner.py  minimal_host_news_to_decision.py  minimal_host_portfolio_review.py  minimal_host_trade_plan_to_decisions.py  minimal_personal_fund_report_flow.py  minimal_personal_fund_report_with_decision_handoff.py  minimal_runtime_bridge_fund_analysis.py  oil_gas_loss_case.json  oil_gas_loss_rebalance.json  portfolio_review_200k.json  rebalance_with_cash_reserve.json  runtime_bridge_decision_support_input.json  runtime_bridge_decision_support_input_v2.json  runtime_bridge_fund_analysis_input.json  runtime_bridge_ledger_snapshot_input.json  runtime_bridge_personal_report_quality_input.json  runtime_bridge_research_query_plan_input.json  short_term_theme_trade.json
fund_agent/: __init__.py  cli.py  providers.py  quality.py  regression.py  reporting.py  runtime.py  version.py  workflow.py
legacy/: README.md  __init__.py  cli.py
schemas/: fund_portfolio_input.schema.json  investment_constraints.schema.json  provider_data_snapshot.schema.json  risk_profile.schema.json  transaction_history.schema.json
scratch/: inspect_qdii_holdings.py  test_fund_news.py  test_intl_news.py  test_news.py  test_news_em.py  test_pandas_option.py  trace_news_em.py  trace_qdii_news.py
scripts/: check_examples.py  check_fast_gate.sh  check_plugin_gate.sh  daily_report_card.py  fund_agent_doctor.py  install_opencode_skills.py  run_personal_regressions.py  run_skill.py  smoke_host_install.py  update_decision_support_golden.py  update_fund_analysis_golden.py  update_thesis_generation_golden.py  verify_install_discovery.py
skillpack/: artifact-contracts.yaml  capabilities.yaml  contracts.yaml  decision-contracts.yaml  fund-agent.skillpack.yaml  input-contracts.yaml  thesis-contracts.yaml  tools.yaml
skills/: README.md  SKILL.md  __init__.py
src/: analyze.py  cli.py
tests/: conftest.py  test_agent_context.py  test_agent_contracts.py  test_agent_summary.py  test_agents_news_node.py  test_agents_planner_ledger.py  test_agents_quant_node.py  test_agents_research_node.py  test_agents_risk_node.py  test_agents_state.py  test_agents_strategy_node.py  test_agents_supervisor.py  test_agents_tools.py  test_alipay_fetcher.py  test_architecture_boundaries.py  test_cli_router.py  test_critic.py  test_decision_contract_v2.py  test_decision_engine_contract.py  test_decision_support_skill.py  test_engine_calculator.py  test_event_taxonomy.py  test_evidence_graph.py  test_evidence_graph_compile.py  test_evidence_graph_purity.py  test_evidence_tools.py  test_external_host_smoke.py  test_finnhub_client.py  test_forecast_decision.py  test_host_integration_contract.py  test_kg_graph.py  test_kg_schema.py  test_knowledge_graph.py  test_mcp_adapter_contract.py  test_news_classifier.py  test_news_evaluator.py  test_news_events.py  test_news_fetcher.py  test_news_keyword_cache.py  test_news_pipeline.py  (+52 more)
(+940 files in other folders)
