[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-agent"
version = "0.4.5"
description = "Host-agnostic AI financial research skill pack / agent plugin"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = [
    "tests/architecture",
    "tests/contracts",
    "tests/skillpack",
    "tests/skills",
    "tests/tools",
    "tests/integration",
    "tests/ci",
    "tests/install",
]
pythonpath = ["."]
markers = [
    "plugin: host-agnostic plugin core tests",
    "contract: schema and runtime contract tests",
    "architecture: boundary and dependency tests",
    "deprecated: optional historical or reference workflow tests",
]

[tool.setuptools.packages.find]
include = ["src*"]
