[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-agent"
version = "1.1.0"
description = "Host-agnostic AI financial research skill pack / agent plugin"
requires-python = ">=3.11"

[project.scripts]
fund-agent-run-skill = "src.skillpack.run_skill:main"
fund-agent-doctor = "src.skillpack.doctor:main"

[tool.pytest.ini_options]
testpaths = [
    "tests/architecture",
    "tests/contracts",
    "tests/skillpack",
    "tests/skills_runtime",
    "tests/skills",
    "tests/tools",
    "tests/integration",
    "tests/ci",
    "tests/docs",
    "tests/golden",
    "tests/install",
    "tests/runtime_bridge",
    "tests/personal_regression",
    "tests/scripts",
]
pythonpath = ["."]
markers = [
    "plugin: host-agnostic plugin core tests",
    "contract: schema and runtime contract tests",
    "architecture: boundary and dependency tests",
    "deprecated: optional historical or reference workflow tests",
    "slow: slow end-to-end or broad smoke tests",
    "subprocess: tests that spawn Python/Node/npm subprocesses",
    "install: packaging/install smoke tests",
    "golden: golden snapshot comparison or snapshot scanning tests",
    "smoke: broad external-host smoke tests",
    "filesystem: tests that scan many files",
    "windows_slow: tests known to be slower on Windows",
]

[tool.setuptools.packages.find]
include = ["src*"]
